Update the visualization

--- a/result_synthetic.ipynb
+++ b/result_synthetic.ipynb
@@ -2,25 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import necessary libraries\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
-    "from matplotlib.ticker import MaxNLocator\n",
     "\n",
-    "# Set the style for better visualizations\n",
     "plt.style.use('seaborn-v0_8-whitegrid')\n",
     "sns.set_context(\"notebook\", font_scale=1.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -264,15 +261,12 @@
     }
    ],
    "source": [
-    "# Load the C-index results\n",
     "cindex_mean = pd.read_csv('SYNTHETIC/results/result_CINDEX_FINAL_MEAN.csv', index_col=0)\n",
     "cindex_std = pd.read_csv('SYNTHETIC/results/result_CINDEX_FINAL_STD.csv', index_col=0)\n",
     "\n",
-    "# Load the Brier score results\n",
     "brier_mean = pd.read_csv('SYNTHETIC/results/result_BRIER_FINAL_MEAN.csv', index_col=0)\n",
     "brier_std = pd.read_csv('SYNTHETIC/results/result_BRIER_FINAL_STD.csv', index_col=0)\n",
     "\n",
-    "# Display the loaded data\n",
     "print(\"C-index Mean:\")\n",
     "display(cindex_mean)\n",
     "print(\"\\nC-index Standard Deviation:\")\n",
@@ -285,18 +279,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract time points from column names\n",
     "cindex_time_points = [int(col.split('yr')[0]) for col in cindex_mean.columns]\n",
     "brier_time_points = [int(col.split('yr')[0]) for col in brier_mean.columns]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +555,6 @@
    ],
    "source": [
     "# Visualization 8: Performance comparison across iterations for Brier score\n",
-    "# Load individual iteration results\n",
     "brier_iterations = []\n",
     "for i in range(5):  # Assuming 5 iterations (0-4)\n",
     "    try:\n",
@@ -572,17 +564,14 @@
     "        print(f\"File for iteration {i} not found\")\n",
     "\n",
     "if brier_iterations:\n",
-    "    # Create a figure with subplots for each event\n",
     "    fig, axes = plt.subplots(len(brier_iterations[0].index), 1, figsize=(12, 4*len(brier_iterations[0].index)), sharex=True)\n",
     "    \n",
     "    for i, event in enumerate(brier_iterations[0].index):\n",
     "        ax = axes[i] if len(brier_iterations[0].index) > 1 else axes\n",
     "        \n",
-    "        # Plot each iteration\n",
     "        for j, df in enumerate(brier_iterations):\n",
     "            ax.plot(brier_time_points, df.loc[event], marker='o', label=f'Iteration {j}')\n",
     "        \n",
-    "        # Plot the mean\n",
     "        ax.plot(brier_time_points, brier_mean.loc[event], 'k--', linewidth=2, label='Mean')\n",
     "        \n",
     "        ax.set_title(f'{event} Brier Score Across Iterations', fontsize=14)\n",
@@ -598,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -614,8 +603,7 @@
    ],
    "source": [
     "# Visualization 9: Radar chart comparing performance metrics\n",
-    "# Prepare data for radar chart\n",
-    "if len(cindex_mean.index) == 2:  # Assuming 2 events\n",
+    "if len(cindex_mean.index) == 2: \n",
     "    fig = plt.figure(figsize=(12, 10))\n",
     "    \n",
     "    # Categories for radar chart (time points)\n",
@@ -652,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +666,6 @@
    ],
    "source": [
     "# Visualization 10: Box plots comparing performance across iterations\n",
-    "# Prepare data for box plots\n",
     "if cindex_iterations and brier_iterations:\n",
     "    # For C-index\n",
     "    cindex_data = {event: [] for event in cindex_iterations[0].index}\n",
@@ -734,19 +721,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axis.XTick at 0x7aed51d258b0>,\n",
-       "  <matplotlib.axis.XTick at 0x7aed51d25940>,\n",
-       "  <matplotlib.axis.XTick at 0x7aed51cf3ee0>],\n",
+       "([<matplotlib.axis.XTick at 0x7aed524a5670>,\n",
+       "  <matplotlib.axis.XTick at 0x7aed50ce8ee0>,\n",
+       "  <matplotlib.axis.XTick at 0x7aed50c83d90>],\n",
        " [Text(12, 0, '12'), Text(24, 0, '24'), Text(36, 0, '36')])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -763,7 +750,6 @@
    ],
    "source": [
     "# Visualization 12: Performance improvement over baseline\n",
-    "# Calculate relative improvement over random prediction (C-index = 0.5)\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
     "for i, event in enumerate(cindex_mean.index):\n",
@@ -783,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +784,6 @@
     "                for line in f:\n",
     "                    if ':' in line:\n",
     "                        key, value = line.strip().split(':', 1)\n",
-    "                        # Try to convert to appropriate data type\n",
     "                        try:\n",
     "                            if value.isdigit():\n",
     "                                params[key] = int(value)\n",
@@ -818,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1017,10 +1002,6 @@
     }
    ],
    "source": [
-    "# First, make sure you have your hyperparameter dataframe loaded\n",
-    "# If you don't have hp_df defined, you need to load or create it\n",
-    "\n",
-    "# Create a figure with subplots\n",
     "fig, axes = plt.subplots(2, 3, figsize=(15, 10))\n",
     "axes = axes.flatten()  # Flatten the 2D array of axes for easier indexing\n",
     "\n",
@@ -1036,6 +1017,13 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
