--- a/synthetic.ipynb
+++ b/synthetic.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Synthetic Competing Risks Data Analysis\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -14,14 +13,13 @@
     "from lifelines import KaplanMeierFitter\n",
     "%matplotlib inline\n",
     "\n",
-    "# Set style for plots\n",
     "plt.style.use('seaborn-whitegrid')\n",
     "sns.set_palette(\"colorblind\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +493,7 @@
    ],
    "source": [
     "in_filename = './sample data/SYNTHETIC/synthetic_comprisk.csv'\n",
-    "df = pd.read_csv(in_filename, sep=',')# Load the dataset\n",
+    "df = pd.read_csv(in_filename, sep=',')\n",
     "df = pd.read_csv('./sample data/SYNTHETIC/synthetic_comprisk.csv', sep=',')\n",
     "\n",
     "# Display the first few rows\n",
@@ -518,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -759,19 +757,18 @@
        "max        4.079600  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Basic statistics of the dataset\n",
     "df.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
