--- a/metabric.ipynb
+++ b/metabric.ipynb
@@ -898,7 +898,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
