Fixed some small bugs

--- a/seer.ipynb
+++ b/seer.ipynb
@@ -174,55 +174,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/tensorflow1.15_nvidia/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/tensorflow1.15_nvidia/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/tensorflow1.15_nvidia/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/tensorflow1.15_nvidia/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/tensorflow1.15_nvidia/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/tensorflow1.15_nvidia/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/tensorflow1.15_nvidia/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/tensorflow1.15_nvidia/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/tensorflow1.15_nvidia/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/tensorflow1.15_nvidia/lib/python3.8/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Encoded data saved to './sample data/SEER/encoded_seer_data.csv'\n",
-      "Encoding mapping saved to './sample data/SEER/encoding_mapping.txt'\n"
+      "Encoded data saved to './sample data/SEER/encoded_SEER_data.csv'\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
+    "# Load the SEER dataset\n",
     "df = pd.read_csv(\"./sample data/SEER/SEER-dataset-train.csv\")\n",
-    "string_columns = df.select_dtypes(include=['object']).columns\n",
     "\n",
-    "# Create a label encoder\n",
-    "le = LabelEncoder()\n",
+    "# Create binary outcome variable (1 for event, 0 for censored)\n",
+    "df['label'] = df['stutus_5_years'].apply(lambda x: 1 if x == 'Dead' else 0)\n",
     "\n",
-    "# Create a dictionary to store the mapping for each column\n",
-    "mapping_dict = {}\n",
+    "# Keep original time variable\n",
+    "df['time'] = df['interva_years']\n",
     "\n",
-    "# Apply label encoding to each string column\n",
-    "for col in string_columns:\n",
-    "    # Store the original values for reference\n",
-    "    unique_values = df[col].unique()\n",
+    "# Identify categorical columns that need one-hot encoding\n",
+    "categorical_cols = [\n",
+    "    'Radiation recode', \n",
+    "    'Chemotherapy recode', \n",
+    "    'Radiation sequence with surgery',\n",
+    "    'ER Status Recode Breast Cancer (1990+)', \n",
+    "    'PR Status Recode Breast Cancer (1990+)',\n",
+    "    'Derived HER2 Recode (2010+)',\n",
+    "    'COD to site recode',\n",
+    "    'Race recode',\n",
+    "    'Sex',\n",
+    "    'Vital status recode (study cutoff used)'\n",
+    "]\n",
+    "\n",
+    "# Initialize the encoder\n",
+    "encoder = OneHotEncoder(sparse=False, drop='first')\n",
+    "\n",
+    "# Create a new dataframe for encoded features\n",
+    "encoded_df = pd.DataFrame()\n",
+    "\n",
+    "# Add time and label as the first columns\n",
+    "encoded_df['time'] = df['time']\n",
+    "encoded_df['label'] = df['label']\n",
+    "\n",
+    "# Add numeric columns directly\n",
+    "numeric_cols = [\n",
+    "    'Age at diagnosis', \n",
+    "    'Regional nodes positive (1988+)', \n",
+    "    'Total number of in situ/malignant tumors for patient',\n",
+    "    'CS tumor size (2004-2015)', \n",
+    "    'Regional nodes examined (1988+)'\n",
+    "]\n",
+    "\n",
+    "for col in numeric_cols:\n",
+    "    encoded_df[col] = df[col]\n",
+    "\n",
+    "# One-hot encode categorical variables\n",
+    "for col in categorical_cols:\n",
+    "    # Fit and transform the column\n",
+    "    encoded_features = encoder.fit_transform(df[[col]])\n",
     "    \n",
-    "    # Transform the column\n",
-    "    df[col] = le.fit_transform(df[col])\n",
+    "    # Get feature names\n",
+    "    feature_names = [f\"{col}_{cat}\" for cat in encoder.categories_[0][1:]]\n",
     "    \n",
-    "    # Store the mapping\n",
-    "    mapping_dict[col] = dict(zip(unique_values, le.transform(unique_values)))\n",
+    "    # Create a DataFrame with the encoded features\n",
+    "    temp_df = pd.DataFrame(encoded_features, columns=feature_names)\n",
+    "    \n",
+    "    # Concatenate with the main dataframe\n",
+    "    encoded_df = pd.concat([encoded_df, temp_df], axis=1)\n",
     "\n",
     "# Save the encoded dataset\n",
-    "df.to_csv(\"./sample data/SEER/encoded_SEER_data.csv\", index=False)\n",
+    "encoded_df.to_csv(\"./sample data/SEER/encoded_SEER_data.csv\", index=False)\n",
     "\n",
-    "# Save the mapping dictionary for reference\n",
-    "with open(\"./sample data/SEER/encoding_mapping.txt\", \"w\") as f:\n",
-    "    for col, mapping in mapping_dict.items():\n",
-    "        f.write(f\"Column: {col}\\n\")\n",
-    "        for original, encoded in mapping.items():\n",
-    "            f.write(f\"  {original} -> {encoded}\\n\")\n",
-    "        f.write(\"\\n\")\n",
-    "\n",
-    "print(\"Encoded data saved to './sample data/SEER/encoded_seer_data.csv'\")\n",
-    "print(\"Encoding mapping saved to './sample data/SEER/encoding_mapping.txt'\")"
+    "print(\"Encoded data saved to './sample data/SEER/encoded_SEER_data.csv'\")"
    ]
   },
   {
