--- a/Image/survival.ipynb
+++ b/Image/survival.ipynb
@@ -803,7 +803,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv2",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -817,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
